Release 2.39.1

Copyright (c) 1998-2010 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.39.1 - March 31, 2010

    Updated the implementation of the uses/2 directive in order to allow
    safe use of the declared shortcuts at runtime.

    Corrected a bug when using the use_mdule/2 directive that resulted in
    a performance penalty when calling module predicates.

    Updated the Logtalk compiler to warn the user when finding deprecated
    directives.

    Updated the Logtalk compiler to recognize "prolog_compatible_version"
    and "tabling" as valid flags.

    Updated the Logtalk compiler to compile settings files with the compiler
    flag "altdirs" turned off in order to avoid problems with directory
    permissions for back-end Prolog compilers, such as Ciao and XSB, which
    require the first run of Logtalk to be made by an administrative user.

    Corrected a bug in the Logtalk compiler that forced recompilation of
    source files when the "smart_compilation" flag was set to "on".

    Corrected an erroneous compiler warning when reporting referenced but
    unknown objects when using the {Object}::Message notation. Thanks to
    Parker Jones for the bug report.

    Corrected a bug in the <</2 control construct where errors would be
    reported without an error/3 wrapper. Thanks to Parker Jones for the
    bug report.

    Corrected a predicate lookup caching bug for the ^^/1 control construct
    (aka "super") that resulted in cached entries never being used when the
    argument was a different predicate from the one being defined by the
    clause containing the call (uncommon but possible).
